[package]
name = "duckengine-loader-folder"
version = "0.1.0"
edition = "2024"

[dependencies]
duckengine-core = { path = "../duckengine-core" }
env_logger = "0.11.8"
log = "0.4.27"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
toml = "0.9.5"
